--- a/index.html
+++ b/index.html
@@ -420,14 +420,14 @@ About
 <div class="mnMen section" id="nav-widget-2"><div class="widget HTML" data-version="2" id="HTML000">
 <ul class="mnMn" itemscope="itemscope" itemtype="https://schema.org/SiteNavigationElement">
 <li>
-<a class="a" href="https://AmulyaSingh.is-a.dev" itemprop="url">
+<a class="a" href="#" itemprop="url">
 <svg class="line" viewBox="0 0 24 24"><g transform="translate(2.000000, 2.000000)"><path class="svgC" d="M4.0706,14.459 C4.0706,14.459 4.8826,12.822 6.0646,12.822 C7.2466,12.822 7.8506,14.197 9.1606,14.197 C10.4696,14.197 11.9386,10.749 13.4226,10.749 C14.9046,10.749 15.9706,13.14 15.9706,13.14"></path><path class="svgC" d="M8.1393,7.1049 C8.1393,7.9649 7.4423,8.6629 6.5813,8.6629 C5.7213,8.6629 5.0243,7.9649 5.0243,7.1049 C5.0243,6.2449 5.7213,5.5469 6.5813,5.5469 C7.4423,5.5479 8.1393,6.2449 8.1393,7.1049 Z"></path><path d="M0.7503,10.0001 C0.7503,16.9371 3.0633,19.2501 10.0003,19.2501 C16.9373,19.2501 19.2503,16.9371 19.2503,10.0001 C19.2503,3.0631 16.9373,0.7501 10.0003,0.7501 C3.0633,0.7501 0.7503,3.0631 0.7503,10.0001 Z"></path></g></svg>
 <span class="n" itemprop="name">Landing Page</span>
 </a>
 </li>
 
 <li>
-<a class="a" href="about.html" itemprop="url">
+<a class="a" href="About.html" itemprop="url">
 <svg class="line" viewBox="0 0 24 24"><g transform="translate(2.749500, 2.549500)"><path d="M6.809,18.9067 C3.137,18.9067 9.41469125e-14,18.3517 9.41469125e-14,16.1277 C9.41469125e-14,13.9037 3.117,11.8997 6.809,11.8997 C10.481,11.8997 13.617,13.8847 13.617,16.1077 C13.617,18.3307 10.501,18.9067 6.809,18.9067 Z"></path><path d="M6.809,8.728 C9.219,8.728 11.173,6.774 11.173,4.364 C11.173,1.954 9.219,-2.48689958e-14 6.809,-2.48689958e-14 C4.399,-2.48689958e-14 2.44496883,1.954 2.44496883,4.364 C2.436,6.766 4.377,8.72 6.778,8.728 L6.809,8.728 Z"></path><path class="svgC" d="M14.0517,7.5293 C15.4547,7.1543 16.4887007,5.8753 16.4887007,4.3533 C16.4897,2.7653 15.3627,1.4393 13.8647,1.1323"></path><path class="svgC" d="M14.7113,11.104 C16.6993,11.104 18.3973,12.452 18.3973,13.655 C18.3973,14.364 17.8123,15.092 16.9223,15.301"></path></g></svg>
 <span class="n" itemprop="name">About</span>
 </a>
